<resources>
    <string name="app_name">Homework_lection1</string>
    <string name="button">Push</string>
    <string name="buttonA">A</string>
    <string name="buttonB">B</string>
    <string name="buttonC">C</string>
    <string name="buttonD">D</string>
    <string name="buttonE">E</string>
    <string name="buttonF">F</string>
    <string name="buttonG">G</string>
    <string name="buttonH">H</string>
    <string name="buttonI">I</string>
    <string name="buttonJ">J</string>
    <string name="buttonK">K</string>
    <string name="buttonL">L</string>
</resources>
